--- a/index.html
+++ b/index.html
@@ -4,9 +4,121 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Booleando</title>
 </head>
 <body>
+    <header>
+        menu
+    </header>
+    <main>
+        <section> <!--riga 1-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="card-img">
+                            <img src=".//images/img/1.webp" alt="Modello1">
+                            <div class="discount">-50%</div>
+                            <div class="sustenible">Sostenibile</div>
+                            <div class="heart"><a href="#">&hearts;</a></div>
+                            <div class="overlay">
+                                <img class="overlay-img" src="./images/img/1b.webp" alt="">
+                                <a class="add-prd" href="#">AGGIUNGI AL CARRELLO</a>
+                            </div>
+                        </div>
+                        <span class="brand">L'evis</span>
+                        <h5>RELAXED FIT TEE UNISEX</h5>
+                        <span class="discount-price">14,99€</span>
+                        <span class="old-price">29,99€</span>
+                    </div>
+                    <div class="col-3">
+                        <div class="card-img">
+                            <img src=".//images/img/2.webp" alt="Modello1">
+                            <div class="discount">-50%</div>
+                            <div class="heart"><a href="#">&hearts;</a></div>
+                            <div class="overlay">
+                                <img class="overlay-img" src="./images/img/2b.webp" alt="">
+                                <a class="add-prd" href="#">AGGIUNGI AL CARRELLO</a>
+                            </div>
+                        </div>
+                        <span class="brand">Guess</span>
+                        <h5>ROSES TEE</h5>
+                        <span class="discount-price">20,99€</span>
+                        <span class="old-price">35,99€</span> 
+                    </div>
+                    <div class="col-3">
+                        <div class="card-img">
+                            <img src=".//images/img/3.webp" alt="Modello1">
+                            <div class="discount">-50%</div>
+                            <div class="heart"><a href="#">&hearts;</a></div>
+                            <div class="overlay">
+                                <img class="overlay-img" src="./images/img/3b.webp" alt="">
+                                <a class="add-prd" href="#">AGGIUNGI AL CARRELLO</a>
+                            </div>
+                        </div>
+                        <span class="brand">L'evis</span>
+                        <h5>VOGLIA DI COLORI PASTELLO</h5>
+                        <span class="discount-price">129,90€</span>
+                        <span class="old-price">189,90€</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section> <!--riga 2-->
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="card-img">
+                            <img src=".//images/img/4.webp" alt="Modello1">
+                            <div class="discount">-50%</div>
+                            <div class="sustenible">Sostenibile</div>
+                            <div class="heart"><a href="#">&hearts;</a></div>
+                            <div class="overlay">
+                                <img class="overlay-img" src="./images/img/4b.webp" alt="">
+                                <a class="add-prd" href="#">AGGIUNGI AL CARRELLO</a>
+                            </div>
+                        </div>
+                        <span class="brand">L'evis</span>
+                        <h5>T-SHIRT LEVIS UNISEX</h5>
+                        <span class="discount-price">14,99€</span>
+                        <span class="old-price">29,99€</span>
+                    </div>
+                    <div class="col-3">
+                        <div class="card-img">
+                            <img src=".//images/img/5.webp" alt="Modello1">
+                            <div class="sustenible-alone">Sostenibile</div>
+                            <div class="heart"><a href="#">&hearts;</a></div>
+                            <div class="overlay">
+                                <img class="overlay-img" src="./images/img/5b.webp" alt="">
+                                <a class="add-prd" href="#">AGGIUNGI AL CARRELLO</a>
+                            </div>
+                        </div>
+                        <span class="brand">Guess</span>
+                        <h5>STRIPIE BODICE GIRL</h5>
+                        <span class="discount-price">20,99€</span>
+                        <span class="old-price">35,99€</span> 
+                    </div>
+                    <div class="col-3">
+                        <div class="card-img">
+                            <img src=".//images/img/6.webp" alt="Modello1">
+                            <div class="heart"><a href="#">&hearts;</a></div>
+                            <div class="overlay">
+                                <img class="overlay-img" src="./images/img/6b.webp" alt="">
+                                <a class="add-prd" href="#">AGGIUNGI AL CARRELLO</a>
+                            </div>
+                        </div>
+                        <span class="brand">L'evis</span>
+                        <h5>MAGLIONE-BLACK GIRL</h5>
+                        <span class="discount-price">129,90€</span>
+                        <span class="old-price">189,90€</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        footer
+    </footer>
     
 </body>
 </html>
