commit generale header

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abel&family=Barlow+Semi+Condensed:wght@300;400;500;600&family=Inconsolata:wght@500;600;700;800&family=Jost&family=Nabla&family=Outfit&family=Roboto:wght@300;400;500&family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +11,34 @@
 </head>
 <body>
     <header>
-        menu
+        <section class="head-content">
+            <div class="container">
+                <div class="row">
+                    <div class="gender">
+                        <ul class="gender-list">
+                            <li><a href="#">UOMO</a></li>
+                            <li><a href="#">DONNA</a></li>
+                            <li><a href="#">BAMBINO</a></li>
+                        </ul>
+                    </div>
+                    <div class="logo">
+                        <a href="#"><img src="./images/img/boolean-logo.png" alt="logo-header"></a>
+                    </div>
+                    <div class="icon">
+                        <a href="#"><img src="./images/img/account_avatar_face_man_people_profile_user_icon_123197.png" alt="User"></a>
+                        <a href="#"><img src="./images/img/bag_buy_cart_market_shop_shopping_tote_icon_123191.png" alt="buy cart"></a>
+                        <a href="#"><img src="./images/img/like-heart-outline-symbol_icon-icons.com_73226.png" alt="like">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </header>
     <main>
         <section> <!--riga 1-->
+            <div class="container">
+                <h2>VISITA LO SHOP</h2>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-3">
