compilazione fotter e suoi link

--- a/index.html
+++ b/index.html
@@ -144,7 +144,30 @@
         </section>
     </main>
     <footer>
-        footer
+        <section class="foot-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col6 left">
+                        <h2>Booleando S.r.l</h2>
+                        <ul class="foot-link">
+                            <a href="#">Informazioni Legali</a>
+                            <a href="#">Diritto Di Accesso</a>
+                            <a href="#">Informativa sulla Privacy</a>
+                        </ul>
+                    </div>
+                    <div class="col6 right">
+                        <h5>Trovaci anche su:</h5>
+                        <ul class="social-link">
+                            <a href=""><img src="./images/img/4202011emailgmaillogomailsocialsocialmedia-115677_115624.png" alt=""></a>
+                            <a href=""><img src="./images/img/4202110facebooklogosocialsocialmedia-115707_115594.png" alt=""></a>
+                            <a href=""><img src="./images/img/42iconfinder-social-media-applications-23whatsapp-4102606_113811.png" alt=""></a>
+                            <a href=""><img src="./images/img/1491579583-yumminkysocialmedia02_83111.png" alt=""></a>
+                            <a href=""><img src="./images/img/1491579609-yumminkysocialmedia08_83079.png" alt=""></a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
     
 </body>
