--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         <section> <!--riga 1-->
             <div class="container">
                 <h2>VISITA LO SHOP</h2>
+                <h4>Outlet 2023</h4>
             </div>
             <div class="container">
                 <div class="row">
+                    
                     <div class="col-3">
                         <div class="card-img">
                             <img src=".//images/img/1.webp" alt="Modello1">
@@ -92,6 +94,9 @@
         </section>
 
         <section> <!--riga 2-->
+            <div class="container">
+                <h4>Novità 2024</h4>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-3">
